--- a/AndroidStudio/assignments/fundamentals/5th/InteractionCallbackAssignment2/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/assignments/fundamentals/5th/InteractionCallbackAssignment2/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
     tools:context=".MainActivity" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/countView"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:textSize="30dp"
+        android:text="0"/>
+    <EditText
+        android:id="@+id/textEdit"
+        android:layout_below="@+id/countView"
+        android:layout_width="match_parent"
+        android:layout_height="50dp" />
 
 </RelativeLayout>
