--- a/AndroidStudio/practice/fundamentals/6th/ListViewPractice/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/practice/fundamentals/6th/ListViewPractice/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,18 @@
 
     <ListView
         android:id="@+id/ListView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/buttonForTop" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Scroll to top"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:id="@+id/buttonForTop"></Button>
 </RelativeLayout>
