コレクション・直列化 課題１ （課題）JSONのレスポンスをパースし、一覧表示してください。 また、ListView部分をタップすると、詳細画面を表示するようにしてください。 その際、表示するデータはすべてMainActivityから渡すようにしてください。
DONE.

--- a/AndroidStudio/assignments/fundamentals/7th/SerializableAssignment/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/assignments/fundamentals/7th/SerializableAssignment/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,15 @@
     tools:context=".MainActivity" >
 
     <TextView
+        android:id="@+id/userId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:text="userId"
+        android:textSize="50dp"/>
 
+    <ListView
+        android:layout_below="@+id/userId"
+        android:id="@+id/ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
