--- a/AndroidStudio/assignments/fundamentals/7th/SerializableAssignment/app/src/main/res/layout/activity_detail.xml
+++ b/AndroidStudio/assignments/fundamentals/7th/SerializableAssignment/app/src/main/res/layout/activity_detail.xml
@@ -9,5 +9,16 @@
     tools:context=".MainActivity" >
 
     <!-- userの情報を表示する -->
+    <TextView
+        android:id="@+id/friendUserId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/friendName"
+        android:layout_below="@+id/friendUserId"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 
 </RelativeLayout>
