--- a/AndroidStudio/practice/fundamentals/7th/SharedPreferencesPractice1/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/practice/fundamentals/7th/SharedPreferencesPractice1/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,53 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
+    <EditText
+        android:id="@+id/savedDataString"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"/>
+
+    <EditText
+        android:id="@+id/savedDataInt"
+        android:layout_below="@+id/savedDataString"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"/>
+
+    <EditText
+        android:id="@+id/savedDataBoolean"
+        android:layout_below="@+id/savedDataInt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"/>
+
+    <EditText
+        android:id="@+id/savedDataLong"
+        android:layout_below="@+id/savedDataBoolean"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"/>
+
+    <EditText
+        android:id="@+id/savedDataFloat"
+        android:layout_below="@+id/savedDataLong"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="50dp"/>
+
+    <Button
+        android:id="@+id/save"
+        android:layout_below="@+id/savedDataFloat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="save"
+        />
+
     <Button
         android:id="@+id/clear"
-         android:layout_width="wrap_content"
+        android:layout_below="@+id/save"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="all clear"
         />
-
 </RelativeLayout>
