--- a/AndroidStudio/projects/fundamentals/10th/ContentProviderSample/app/src/main/res/layout/activity_main_loader.xml
+++ b/AndroidStudio/projects/fundamentals/10th/ContentProviderSample/app/src/main/res/layout/activity_main_loader.xml
@@ -8,16 +8,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <Button
-        android:id="@+id/Insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/insert" />
-
-    <Button
-        android:id="@+id/Next"
-        android:layout_below="@+id/Insert"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next" />
+    <ListView
+        android:id="@+id/ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </RelativeLayout>
