--- a/AndroidStudio/practice/advanced/3rd/IncludePractice/app/src/main/res/layout/activity_main.xml
+++ b/AndroidStudio/practice/advanced/3rd/IncludePractice/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="vertical"
     tools:context=".MainActivity" >
 
-    <!-- 自由にincludeを使用したレイアウトを作成してください -->
-
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:text="Hello" />
 
-</RelativeLayout>
+    <!--
+     TODO
+     (実習) include を使用したレイアウトを作成し、
+     merge の有り無しで View の階層がどのようになるのかを
+      Hierarchy View で確認してレポートしてください。
+    -->
+    <include layout="@layout/include_button" />
+
+</LinearLayout>
