--- a/AndroidStudio/practice/advanced/3rd/DialogPractice2/app/src/main/res/menu/main.xml
+++ b/AndroidStudio/practice/advanced/3rd/DialogPractice2/app/src/main/res/menu/main.xml
@@ -6,4 +6,15 @@
         android:showAsAction="never"
         android:title="@string/action_settings"/>
 
+    <item
+        android:id="@+id/action_delete"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Delete"/>
+
+    <item
+        android:id="@+id/action_cancel"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Cancel"/>
 </menu>
